<resources>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_and_reserved">Your starred and reserved events</string>
    <string name="starred_and_reserved_short">Your events</string>
    <string name="search_schedule_hint" translation_description="Text field hint that is shown when user has not entered a search query">Search the schedule</string>
    <string name="search_schedule_no_results" translation_description="Text that is shown if there are no search results">No results found</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="event_star_error" translation_description="The message shown for an error when user tries to add an event.">Error adding event to starred items</string>
    <string name="reservation_error" translation_description="The message shown for an error when user is trying to reserve a session attendance.">Error making changes to reservation. Wait for previous requests to finish or try again later.</string>
    <string name="reservation_request_succeeded" translation_description="The message shown when user tries to reserve a seat for a session.">Reservation requested.</string>
    <string name="reservation_cancel_succeeded" translation_description="The message shown when user has canceled their reservation for a session.">Reservation canceled: \"&lt;b>%s&lt;/b>.\"</string>
    <string name="reservation_new" translation_description="The message shown when user's reservation is confirmed by the system.">Your seat has been reserved for \"&lt;b>%s&lt;/b>\".</string>
    <string name="reservation_replaced" translation_description="The message shown when user has chosen to replace a reservation for another and it is confirmed by the system.">Event replaced.</string>
    <string name="waitlist_new" translation_description="The message shown when user is added to the waitlist of a session reservation.">You have been waitlisted.</string>
    <string name="waitlist_cancel_succeeded" translation_description="The message shown when user has canceled their reservation and was waitlisted for a session.">Removed from waitlist.</string>
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>
    <string name="reservation_denied_cutoff" translation_description="The message shown when user's reservation is denied because the session starts too soon">Reservation denied: too close to start time.</string>
    <string name="reservation_denied_clash" translation_description="The message shown when user's reservation is denied because they have reserved another event at that time">Reservation denied: clash with another reservation</string>
    <string name="reservation_denied_unknown" translation_description="The message shown when user's reservation is denied because of an unknown error">Reservation denied: unknown error.</string>
    <string name="cancellation_denied_cutoff" translation_description="The message shown when user is trying to cancel a reservation but it's denied because the session starts too soon">Cancellation denied: too close to start time.</string>
    <string name="cancellation_denied_unknown" translation_description="The message shown when user is trying to cancel a reservation but it's denied because of an unknown error">Cancellation denied: unknown error.</string>
    <string name="schedule_filters_empty" translation_description="The message shown when a schedule page is empty because no events match the current filters.">No events found.</string>
    <string name="reservation_reservable" translation_description="Label shown on events for which the user can request to reserve a seat.">Reserve seat</string>
    <string name="reservation_reserved" translation_description="Label shown on events for which the user has reserved a seat.">Reserved</string>
    <string name="reservation_waitlisted" translation_description="Label shown on events for which the user is on the waitlist.">Waitlisted</string>
    <string name="reservation_waitlist_available" translation_description="Label shown on events for which the user can join the waitlist.">Join waitlist</string>
    <string name="reservation_disabled" translation_description="Label shown on events for which the user cannot request a seat.">Reservations unavailable</string>
    <string name="reservation_pending" translation_description="Label shown on events for which a reservation request is pending.">Reservation pending</string>
    <string name="schedule_hint_title" translation_description="The title of the schedule hint dialog.">Customize your schedule</string>
    <string name="schedule_hint_star_event" translation_description="The schedule hint for the icon to star an event.">Add to your starred events</string>
    <string name="schedule_hint_reserve_session_seat" translation_description="The schedule hint for the icon to reserve a session.">Reserve a session seat</string>
    <string name="ask_question" translation_description="The label for the link to open an input form to ask a question about this session. [CHAR_LIMIT=30]">Q &amp; A</string>
    <string name="rate_session" translation_description="The label for the button to rate the session by 5 stars">Rate Session</string>
    <string name="menu_item_session_location" translation_description="The label for the location of the session.">Session location</string>
    <string name="menu_item_session_star" translation_description="The label for starring of the session.">Star session</string>
    <string name="menu_item_calendar" translation_description="The label for adding a session schedule to the user's calendar app.">Add to calendar</string>
    <string name="paragraph_delimiter" translatable="false">\n\n</string>
    <string name="speaker_delimiter" translation_description="The text delimiter of speaker names. The names are not localized.">, </string>
    <string name="session_detail_header_aspect" translatable="false">H,16:9</string>
    <string name="session_detail_speakers_header" translation_descriptions="The label for the session speakers.">Speakers</string>
    <string name="session_detail_related_header" translation_description="The label for the events related to this session.">Related Events</string>
    <string name="feedback_submit" translation_description="The label for the button to submit feedback to a session">Submit</string>
    <string name="feedback_thank_you" translation_description="The message shown to the user when they have sent feedback to a session.">Thank you for your feedback!</string>
    <string name="feedback_q1_text" translation_description="A question for session feedback (Q1)">How would you rate the overall quality of the Session?</string>
    <string name="feedback_q2_text" translation_description="A question for session feedback (Q2)">How would you describe the content of the Session based on your expectations/session description?</string>
    <string name="feedback_q3_text" translation_description="A question for session feedback (Q3)">How would you rate the Speaker(s)?</string>
    <string name="feedback_q4_text" translation_description="A question for session feedback (q4)">How relevant was the Session to your projects?</string>
    <string name="feedback_q1_label_start" translation_description="The label of negative answer for a session feedback question (Q1)">Poor</string>
    <string name="feedback_q2_label_start" translation_description="The label of negative answer for a session feedback question (Q2)">Poor</string>
    <string name="feedback_q3_label_start" translation_description="The label of negative answer for a session feedback question (Q3)">Poor</string>
    <string name="feedback_q4_label_start" translation_description="The label of negative answer for a session feedback question (Q4)">Not very</string>
    <string name="feedback_q1_label_end" translation_description="The label of positive answer for a session feedback question (Q1)">Outstanding</string>
    <string name="feedback_q2_label_end" translation_description="The label of positive answer for a session feedback question (Q2)">Outstanding</string>
    <string name="feedback_q3_label_end" translation_description="The label of positive answer for a session feedback question (Q3)">Outstanding</string>
    <string name="feedback_q4_label_end" translation_description="The label of positive answer for a session feedback question (Q4)">Extremely</string>
    <string name="a11y_show_navigation" translation_description="Description of the menu button shown on top-level screens.">Show navigation menu</string>
    <string name="a11y_collapse_filters_sheet" translation_description="Description of a button to lower the filters sheet.">Lower filters sheet</string>
    <string name="a11y_clear_tag_filters" translation_description="Description of a button to remove all current tag filters.">Clear filters</string>
    <string name="a11y_filter_applied" translation_description="Alternative text when an event filter is applies">%1s filter applied</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_">Continue</string>
    <string name="sms_code">SMS Code</string>
    <string name="resend_code">Resend OTP Code</string>
    <string name="log_in">Login</string>
    <string name="register_your_number">Register your mobile number</string>
    <string name="well_contatct">We\'ll contact you if you were in proximity of a Covid patient.</string>
    <string name="verify_otp">Verify OTP</string>
</resources>